# haskell

./: .ghc.environment.x86_64-mingw32-9.2.5  haskell.cabal
app/: SecondExecutable.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Lib.hs
test/: Spec.hs  samples.txt
