cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common for-all
    build-depends:
        base ^>=4.16.4.0
      , hspec
      , text >=1.2.5.0

    default-language: Haskell2010
    ghc-options:      -Wall


library
    import:            for-all
    exposed-modules:   Lib
    hs-source-dirs:    src

executable haskell
    import:           for-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   app, src

executable haskell2
    import:           for-all
    main-is:          SecondExecutable.hs
    other-modules:    Lib
    hs-source-dirs:   app, src
    ghc-options:      -main-is SecondExecutable

test-suite haskell-test
    import:           for-all
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    other-modules:    Lib
    ghc-options:      -main-is Spec

-- test-suite haskell-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules:
--       Lib
--   hs-source-dirs:
--       test
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , haskell
--   default-language: Haskell2010